@@ -64,6 +64,8 @@ Release 0.18.0 - Unreleased
                splits (Jonathan Gray via Stack)
    HBASE-877   HCM is unable to find table with multiple regions which contains
                binary (Jonathan Gray via Stack)
+   HBASE-822  The BatchUpdate class provides, put(col, cell) and delete(col)
+              but no get() (Ryan Smith via Stack)
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
